display active effects button; uncomment effect termination cde

--- a/templates/actor/sections/conditions.hbs
+++ b/templates/actor/sections/conditions.hbs
@@ -42,7 +42,7 @@
     <div class='label'>{{i18n 'GURPS.conditionsCombatMove'}}:</div>
     <div class='field' name='data.conditions.combatmove'><span>{{data.conditions.move}}</span></div>
     <div class='label'></div>
-    <div class='field' style='border: none; display: none;'>
+    <div class='field' style='border: none;'>
       <button id='open-modifier-popup'><i
           class="fas fa-external-link-alt"></i>{{i18n 'GURPS.activeEffects'}}</button>
     </div>
