--- a/templates/active-effects/active-effect-config.html
+++ b/templates/active-effects/active-effect-config.html
@@ -125,11 +125,32 @@
     <ol class="changes-list">
       {{#each data.changes as |change i|}}
         <li class="effect-change flexrow" data-index="{{i}}">
+
           <div class="key">
             <select name='changes.{{i}}.key'>
               {{selectOptions ../changes selected=change.key localize=true}}
+              <option value='other'>&lt;{{i18n 'GURPS.moveModeOther'}}&gt;</option>
             </select>
+            <div class='expand-container' style='overflow: hidden; line-height: 0;'>
+              <input id='expand-contract-{{key}}' class='expand-contract splitdr-control contracted' data-action='other'
+                type='text' value='{{i18n type type}}' />
+            </div>
           </div>
+
+          <!-- <div style='display: flex; flex-flow: column nowrap'>
+            <select class='splitdr-control' data-action='type' style='width: 100%;'>
+              {{#each (damageTypeOptions key)}}
+                <option value='{{this}}' {{select-if this key}}>{{i18n (concat 'GURPS.damageAbbrev' this) this}}
+                </option>
+              {{/each}}
+              <option value='other'>&lt;{{i18n 'GURPS.moveModeOther'}}&gt;</option>
+            </select>
+            <div class='expand-container' style='overflow: hidden; line-height: 0;'>
+              <input id='expand-contract-splitdr' class='expand-contract splitdr-control contracted' data-action='other'
+                type='text' value='{{i18n type type}}' />
+            </div>
+          </div> -->
+
           <div class="mode">
             <select name="changes.{{i}}.mode" data-dtype="Number">
               {{selectOptions ../modes selected=change.mode}}
