properly register alternate ActiveEffectConfig sheet

--- a/templates/active-effects/active-effect-config.html
+++ b/templates/active-effects/active-effect-config.html
@@ -80,8 +80,9 @@
     <hr />
     <div class="form-group">
       <label>{{i18n "GURPS.effectsTermination"}}</label>
+      {{debug data}}
       <div class="form-fields">
-        <input type="text" name="flags.gurps.endCondition" value="{{ data.flags.gurps.endCondition }}" />
+        <input type="text" name="flags.gurps.effect.endCondition" value="{{ data.flags.gurps.effect.endCondition }}" />
       </div>
     </div>
     <hr />
